--- a/package.json
+++ b/package.json
@@ -27,10 +27,7 @@
     "@pixi/particle-emitter": "^5.0.8",
     "clean-webpack-plugin": "^4.0.0",
     "esbuild-loader": "^2.20.0",
-    "pixi.js": "^7.0.4"
-  },
-  "bugs": {
-    "url": "https://github.com/phungthuc/Dragon_Warrior_Game/issues"
-  },
-  "homepage": "https://github.com/phungthuc/Dragon_Warrior_Game#readme"
+    "pixi.js": "^7.0.4",
+    "vconsole": "^3.15.1"
+  }
 }
